# MIPT_project

./: .gitignore  CMakeLists.txt  README.md
docs/: conventions.md  conventions.txt  teamRules.md
include/: components.h  texturePaths.h
include/core/: animation.h  buttonSystem.h  cameraSystem.h  objectManager.h  objectPool.h
include/game/: gameObjectManager.h  gameObjects.h  levelManager.h  objectManager.h  shapes.h  stats.h  worldMap.h
include/game/entities/: bullet.h  player.h  units.h
libs/: CMakeLists.txt
src/: components.cpp  main.cpp
src/UI/: buttonSystem.cpp
src/core/: animation.cpp  buttonSystem.cpp  cameraSystem.cpp
src/game/: gameObjects.cpp  levelManager.cpp  stats.cpp  worldMap.cpp
src/game/entities/: player.cpp  units.cpp
